--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,11 @@ html,
 main {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: light) {
